# mollie-cli

./: Cargo.toml  README.md
mollie-api/: Cargo.toml
mollie-api/src/: errors.rs  lib.rs
mollie-api/src/endpoints/: customers.rs  methods.rs  payments.rs
mollie-api/src/resources/: customers.rs  methods.rs  payments.rs
src/: api.rs  errors.rs  handler.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/customers/: command.rs  get.rs  mod.rs  resource.rs
src/cli/customers/endpoints/: get.rs  update.rs
src/cli/methods/: command.rs  get.rs  mod.rs  resource.rs
src/cli/methods/endpoints/: all.rs  get.rs  list.rs  mod.rs
src/cli/payments/: command.rs  get.rs  mod.rs  resource.rs
src/cli/payments/endpoints/: get.rs
