[package]
name = "mollie-cli"
version = "0.1.0"
edition = "2021"
publish = false
description = "CLI to interact with the Mollie API"

[dependencies]
mollie-api = { path = "./mollie-api" }
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.1", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
thiserror = "1.0"

[workspace]
resolver = "2"
members = ["mollie-api"]
